Rollback logic to adjust collection fast counts should not process entire oplog chain for vectored inserts

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Replication
    • Fully Compatible
    • ALL
    • Repl 2024-03-18
    • 134
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The logic here will process the entire oplog chain when determining adjusted record store counts for rollback.

      This logic is not correct for vectored inserts that replicate transactionally, as it is possible that only some of the entries from a given vectored insert get rolled back, as seen in BF-32174.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Kaitlin Mahar
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: