SERVER-87858 Rollback logic to adjust collection fast counts should not process entire oplog chain

GitOrigin-RevId: 83b3e77ce7f5e0bb325036b4a1b5971000e16b07