src/mongo/db/repl/rollback_impl.cpp
@@ -956,7 +956,8 @@ Status RollbackImpl::_processRollbackOp(OperationContext* opCtx, const OplogEntr
         // Follow chain on applyOps oplog entries to process entire unprepared transaction.
         // The beginning of the applyOps chain may precede the common point.
         auto status = _processRollbackOpForApplyOps(opCtx, oplogEntry);
-        if (const auto prevOpTime = oplogEntry.getPrevWriteOpTimeInTransaction()) {
+        if (oplogEntry.applyOpsIsLinkedTransactionally()) {
+            const auto prevOpTime = oplogEntry.getPrevWriteOpTimeInTransaction();
             for (TransactionHistoryIterator iter(*prevOpTime); status.isOK() && iter.hasNext();) {
                 status = _processRollbackOpForApplyOps(opCtx, iter.next(opCtx));
             }
